<resources>
    <string name="app_name">Contador</string>
    <string name="volver">Volver</string>

    <!-- PANTALLA INICIO-->
    <string name="piJugar">Jugar</string>
    <string name="piOpc">Opciones</string>
    <string name="piInfo">Información</string>
    <string name="piSalir">Salir</string>

    <!-- MAIN ACTIVITY -->
    <string name="maTienda">Tienda</string>

    <!-- TIENDA -->
    <string name="tiMouse">Mouse: aumenta el número de clicks por segundo por 1</string>
    <string name="tiDollar">Billete: aumenta el valor de los clicks por 1</string>

    <!-- PANTALLA INFORMACION (o CREDITOS por temas de organización) -->
    <string name="pcAutor">CREADO POR: Águeda P.L.</string>
    <string name="pcCookieClicker">Inspirado por Cookie Clicker</string>
    <string name="pcInstrucciones">INSTRUCCIONES</string>

    <!-- PANTALLA OPCIONES-->
    <string name="poOtros">Otros recursos:</string>
    <string name="poIdioma">Toolbar: idioma (trabajo en proceso)</string>
    <string name="langEn">Inglés</string>
    <string name="langEs">Español</string>
    <string name="poBorrar">BORRAR</string>
    <string name="poDatos">Datos almacenados</string>

    <!-- PANTALLA LOGIN -->
    <string name="plIniciarSesion">Iniciar sesión</string>
    <string name="plRegistrarse">Registrarse</string>
    <string name="plUsuario">Usuario</string>
    <string name="plContraseña">Contraseña</string>

</resources>