<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaRegistro"
    android:background="@color/bgTienda">

    <Button
        android:id="@+id/volver"
        android:backgroundTint="@color/bgElemTienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:onClick="volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/prEdtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/plUsuario"
        android:autofillHints=""
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="250dp"/>

    <EditText
        android:id="@+id/prEdtContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/plContraseña"
        android:autofillHints=""
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prEdtUsuario"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/prEdtConfContr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/plContraseña"
        android:autofillHints=""
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prEdtContraseña"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/prBtnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plRegistrarse"
        android:onClick="registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prEdtConfContr"
        android:layout_marginTop="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>