<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaOpciones"
    android:background="@color/bgTienda">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bgElemTienda"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/poTxvIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poIdioma"
        android:textColor="@color/text"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/credRec"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/poDatos"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poTxvIdioma" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/poRecyclerView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credRec" />

    <Button
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:onClick="volver"
        android:text="@string/volver"
        android:textSize="25dp"
        android:backgroundTint="@color/bgElemTienda"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>