<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tienda"
    android:background="@color/bgTienda">

    <Button
        android:id="@+id/volverTiendaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:textSize="25dp"
        android:backgroundTint="@color/bgElemTienda"
        android:onClick="volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/textoContador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="0"
        android:textSize="100dp"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LLClick"
        android:layout_width="350dp"
        android:layout_height="145dp"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/volverTiendaButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/dollar"
            android:layout_width="285dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/dollar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/dollarUGText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tiDollar"
                android:textColor="@color/text"
                android:textSize="22dp" />

            <Button
                android:id="@+id/dollarUGButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center"
                android:onClick="mejorarClick"
                android:text="100c"
                android:backgroundTint="@color/bgElemTienda"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLAutoC"
        android:layout_width="350dp"
        android:layout_height="145dp"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toTopOf="@id/LLClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/autoclick"
            android:layout_width="285dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/mouse" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/autoclickUGText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/tiMouse"
                android:textColor="@color/text"
                android:textSize="22dp" />

            <Button
                android:id="@+id/autoclickUGButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center"
                android:onClick="mejorarAutoC"
                android:text="100c"
                android:backgroundTint="@color/bgElemTienda"
                />
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>